# jcode

./: Cargo.toml  TELEMETRY.md
.github/workflows/: jcode-sol-bootstrap.yml
changelog/: v0.52.0.json
crates/jcode-app-core/src/: network_retry.rs  server.rs  update.rs
crates/jcode-base/: Cargo.toml
crates/jcode-base/src/: browser.rs  config.rs  config_tests.rs  gmail.rs  live_tests.rs  model_pricing.rs  prompt.rs  prompt_tests.rs  sponsors.rs  todo.rs
crates/jcode-config-types/src/: lib.rs
crates/jcode-desktop/src/: main.rs  main_tests.rs  single_session.rs  single_session_render.rs  workspace.rs
crates/jcode-embedding/src/: lib.rs
crates/jcode-plan/src/: bridge.rs
crates/jcode-protocol/src/: lib.rs  wire.rs
crates/jcode-provider-anthropic-runtime/src/: anthropic_tests.rs  lib.rs
crates/jcode-provider-core/src/: lib.rs  reasoning.rs
crates/jcode-provider-metadata/src/: catalog.rs
crates/jcode-provider-openai-runtime/src/: lib.rs  openai_provider_impl.rs  openai_tests.rs
crates/jcode-provider-openrouter-runtime/src/: lib.rs  openrouter_provider_impl.rs  (+1 more)
crates/jcode-storage/: Cargo.toml
crates/jcode-storage/src/: active_pids.rs  lib.rs
crates/jcode-telemetry-core/: Cargo.toml
crates/jcode-telemetry-core/src/: lib.rs  tests.rs
docs/: .jcode-sol-bootstrap-trigger  JCODE_SOL_BOOTSTRAP_FAILURE.md  SWARM_ARCHITECTURE.md  SWARM_TASK_GRAPH.md
scripts/: install.sh  jcode_sol_refactor.py  setup_friction_eval.sh  test_size_budget.json  test_windows_setup_evaluation.ps1  update_packages.sh
src/cli/: dispatch.rs  selfdev.rs  startup.rs
(+81 files in other folders)
