[package]
name = "jcode-telemetry-core"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "jcode_telemetry_core"
path = "src/lib.rs"

# Compatibility-only facade. Runtime telemetry, identifiers, persistence,
# background workers, and network delivery are intentionally absent.
[dependencies]
jcode-logging = { path = "../jcode-logging" }
jcode-usage-types = { path = "../jcode-usage-types" }
serde_json = "1"
